--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - uses: actions/first-interaction@v3
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: |
             👋 **Welcome and thanks for opening your first issue!**
 
